find_package(PkgConfig REQUIRED QUIET)
pkg_check_modules(POCKETSPHINX REQUIRED QUIET pocketsphinx)
pkg_check_modules(SPEEXDSP REQUIRED QUIET speexdsp)

execute_process(COMMAND pkg-config --variable=modeldir pocketsphinx
				OUTPUT_VARIABLE POCKETSPHINX_MODELDIR_OUTPUT
				OUTPUT_STRIP_TRAILING_WHITESPACE)

set(POCKETSPHINX_MODELDIR ${POCKETSPHINX_MODELDIR_OUTPUT} CACHE INTERNAL EXPORTEDVARIABLE)

message(STATUS "Found Speex version ${SPEEXDSP_VERSION}")
message(STATUS "Found PocketSphinx version ${POCKETSPHINX_VERSION}")

set(speechprocessor_INCLUDE_DIR
	${POCKETSPHINX_INCLUDE_DIRS}
	${SPEEXDSP_INCLUDE_DIRS}
	CACHE INTERNAL EXPORTEDVARIABLE
)
set(speechprocessor_DEFS
	${POCKETSPHINX_CFLAGS}
	${SPEEXDSP_CFLAGS}
	CACHE INTERNAL EXPORTEDVARIABLE
)
set(speechprocessor_LIBS
	${POCKETSPHINX_LIBRARIES}
	${SPEEXDSP_LIBRARIES}
	CACHE INTERNAL EXPORTEDVARIABLE
)
set(speechprocessor_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/speechprocessor.cpp
	CACHE INTERNAL EXPORTEDVARIABLE
)
