find_package(QtAV REQUIRED)

set(videoplayer_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/videoplayer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/videowidget.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/waveformat.h
	${CMAKE_CURRENT_SOURCE_DIR}/subtitletextoverlay.cpp
	CACHE INTERNAL EXPORTEDVARIABLE
)

set(videoplayer_INCLUDE_DIR
	${QTAV_INCLUDE_DIRS}
	${QTAVWIDGETS_INCLUDE_DIRS}
	CACHE INTERNAL EXPORTEDVARIABLE
)
set(videoplayer_LIBS
	${QTAV_LIBRARIES}
	${QTAVWIDGETS_LIBRARIES}
	CACHE INTERNAL EXPORTEDVARIABLE
)
