# TODO WHY AREN'T THESE TWO INCLUDED BY MACRO_OPTIONAL_FIND_PACKAGE( GStreamer )?
FIND_PACKAGE( GLIB2 REQUIRED )
FIND_PACKAGE( LibXml2 REQUIRED )

SET( services_gstreamer_INCLUDE_DIR
	${GLIB2_INCLUDE_DIR}
	${LIBXML2_INCLUDE_DIR}
	${GSTREAMER_INCLUDE_DIR}
	CACHE INTERNAL EXPORTEDVARIABLE
)

SET( services_gstreamer_DEFS
	${GOBJECT_DEFINITIONS}
	${GSTREAMER_DEFINITIONS}
	CACHE INTERNAL EXPORTEDVARIABLE
)

SET( services_gstreamer_LIBS
	${GOBJECT_LIBRARIES}
	${GSTREAMER_LIBRARIES}
	${GSTREAMER_INTERFACE_LIBRARY}
	CACHE INTERNAL EXPORTEDVARIABLE
)

SET( services_gstreamer_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/gstreamerplayerbackend.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/gstreamerdecoderbackend.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/gstreamerconfigwidget.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/gstreamer.cpp
	CACHE INTERNAL EXPORTEDVARIABLE
)

