find_package(GLIB2 REQUIRED QUIET)
find_package(GObject REQUIRED QUIET)
find_package(LibXml2 REQUIRED QUIET)

set(services_gstreamer_INCLUDE_DIR
	${GLIB2_INCLUDE_DIR}
	${LIBXML2_INCLUDE_DIR}
	${GSTREAMER_INCLUDE_DIR}
#	${GSTREAMER_BASE_INCLUDE_DIRS}
	${GSTREAMER_VIDEO_INCLUDE_DIRS}
	CACHE INTERNAL EXPORTEDVARIABLE
)

set(services_gstreamer_DEFS
	${GOBJECT_DEFINITIONS}
	CACHE INTERNAL EXPORTEDVARIABLE
)

set(services_gstreamer_LIBS
	${GLIB2_LIBRARIES}
	${GOBJECT_LIBRARIES}
	${GSTREAMER_LIBRARIES}
#	${GSTREAMER_BASE_LIBRARIES}
	${GSTREAMER_VIDEO_LIBRARIES}
	CACHE INTERNAL EXPORTEDVARIABLE
)

set(services_gstreamer_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/gstreamerplayerbackend.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/gstreamerdecoderbackend.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/gstreamerconfigwidget.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/gstreamer.cpp
	CACHE INTERNAL EXPORTEDVARIABLE
)

