set(services_xine_INCLUDE_DIR
	${XINE_INCLUDE_DIR}
	CACHE INTERNAL EXPORTEDVARIABLE
)

set(services_xine_DEFS
	-D_FILE_OFFSET_BITS=64
	CACHE INTERNAL EXPORTEDVARIABLE
)

set(services_xine_LIBS
	${XINE_LIBRARY}
	-lX11
	CACHE INTERNAL EXPORTEDVARIABLE
)

set(services_xine_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/xineplayerbackend.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/xinevideolayerwidget.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/xineconfigwidget.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/xineconfigwidget.ui
	CACHE INTERNAL EXPORTEDVARIABLE
)

find_package(XCB)
IF(XCB_FOUND AND XINE_XCB_FOUND)
	set(HAVE_XCB 1 CACHE INTERNAL EXPORTEDVARIABLE)
	set(services_xine_INCLUDE_DIR
		${LIBXCB_INCLUDE_DIR}
		${services_xine_INCLUDE_DIR}
		CACHE INTERNAL EXPORTEDVARIABLE
)
	set(services_xine_DEFS
		${LIBXCB_DEFINITIONS}
		${services_xine_DEFS}
		CACHE INTERNAL EXPORTEDVARIABLE
)
	set(services_xine_LIBS
		${LIBXCB_LIBRARIES}
		${services_xine_LIBS}
		CACHE INTERNAL EXPORTEDVARIABLE
)
endif(XCB_FOUND AND XINE_XCB_FOUND)
